[package]
name = "ForgeGuardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
base64 = "0.22.0"
hex = "0.4.3"
